--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+  <link rel="stylesheet" href="/css/style.css">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
   <title>Frontend Mentor | Order summary card</title>
@@ -16,30 +16,35 @@
 </head>
 <body>
   <div class="container">
-    <div class="top-wrapper">
-      <img>
-    </div>
-    <div class="summary">
-      <h2>Order Summary</h2>
-      <p>You can now listen to millions of songs, audiobooks, and podcasts on any 
-        device anywhere you like!</p>
-    </div>
-    <div class="plan">
-      <i></i>
-      <div class="price-plan">
-        <h6>Annual Plan</h6>
-        <h6>$59.99/year</h6>
+    <div class="card">
+      <div class="top-wrapper">
+        <img src="/images/illustration-hero.svg" >
       </div>
-      <a>Change</a>
+      <div class="summary">
+        <h2>Order Summary</h2>
+        <p>You can now listen to millions of songs, audiobooks, and podcasts on any 
+          device anywhere you like!</p>
+      </div>
+      <div class="plan">
+        <img class="icon-music" src="/images/icon-music.svg">
+        <div class="price-plan">
+          <h5>Annual Plan</h5>
+          <h5 style="color:hsl(224, 23%, 55%)">$59.99/year</h5>
+        </div>
+        <a>Change</a>
+      </div>
+      <div class="action">
+        <div class="btn-group">
+          <button>Proceed To Payment</button>
+          <button style="margin-top:15px;color:hsl(223, 47%, 23%);background-color:white;">Cancel Order</button>
+        </div>
+      </div>
     </div>
-    <div class="action"></div>
-      <button>Proceed to Payment</button>
-      <button>Cancel Order</button>
   </div>
-  
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">steezyza</a>.
   </div>
+  
 </body>
 </html>
