--- a/index.html
+++ b/index.html
@@ -17,34 +17,34 @@
 <body>
   <div class="container">
     <div class="card">
-      <div class="top-wrapper">
-        <img src="/images/illustration-hero.svg" >
-      </div>
-      <div class="summary">
+      <header>
+        <img src="/images/illustration-hero.svg" alt="wrapper">
+      </header>
+      <main>
         <h2>Order Summary</h2>
         <p>You can now listen to millions of songs, audiobooks, and podcasts on any 
           device anywhere you like!</p>
-      </div>
-      <div class="plan">
-        <img class="icon-music" src="/images/icon-music.svg">
+      </main>
+      <section class="plan">
+        <img class="icon-music" src="/images/icon-music.svg" alt="icon">
         <div class="price-plan">
           <h5>Annual Plan</h5>
           <h5 style="color:hsl(224, 23%, 55%)">$59.99/year</h5>
         </div>
         <a>Change</a>
-      </div>
-      <div class="action">
+      </section>
+      <section class="action">
         <div class="btn-group">
           <button>Proceed To Payment</button>
           <button style="margin-top:15px;color:hsl(223, 47%, 23%);background-color:white;">Cancel Order</button>
         </div>
-      </div>
+      </section>
     </div>
   </div>
-  <div class="attribution">
+  <footer>
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">steezyza</a>.
-  </div>
+  <footer>
   
 </body>
 </html>
