--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </style>
 </head>
 <body>
-  <div class="container">
+  <section class="container">
     <div class="card">
       <header>
         <img src="/images/illustration-hero.svg" alt="wrapper">
@@ -40,7 +40,7 @@
         </div>
       </section>
     </div>
-  </div>
+  </section>
   <footer>
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">steezyza</a>.
